spacing snafu on home page fixed

--- a/app/assets/stylesheets/main_styles.css.scss
+++ b/app/assets/stylesheets/main_styles.css.scss
@@ -63,7 +63,9 @@ h3 {
 }
 
 .content-1 {
+	width: 100%;
 	height: 300px;
+	margin: 0 auto;
 }
 
 .image-2 {
@@ -78,9 +80,9 @@ h3 {
 
 
 .text-1 {
-	max-width: 740px;
-	padding-top: 80px;
-	padding-bottom: 50px;
+	width: 740px;
+	padding: 80px 0 50px 0;
+	margin: 0 auto;
 }
 
 .text-1-text{
